First cut of data extraction tool. Reads layers and their names specified in the app config file, requests them from a MapServer, and converts the returned Json data to CSV.

--- a/App.config
+++ b/App.config
@@ -3,4 +3,17 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <!--<add key="copDataUrlEn" value="https://cop-poc.dfo-mpo.ca/arcgis1/rest/services/ccg_cop/CCG_COP_BASE_En_R4/MapServer"/>
+    <add key="copDataUrlFr" value="https://cop-poc.dfo-mpo.ca/arcgis1/rest/services/ccg_cop/CCG_COP_BASE_Fr_R4/MapServer"/>-->
+    <add key="copDataUrlEn" value="http://localhost:8080/layers/CCG_COP_BASE_En_R4/mapserver"/>
+    <add key="copDataUrlFr" value="http://localhost:8080/layers/CCG_COP_BASE_Fr_R4/mapserver"/>
+    <add key="copLayers" value="1-4,5,6-13"/>
+    <add key="outputJsonDirectoryEn" value="D:\dev\COPDataExtraction\output\en"/>
+    <add key="outputJsonDirectoryFr" value="D:\dev\COPDataExtraction\output\fr"/>
+    <add key="fileLoggingEnabled" value="False"/>
+    <add key="promptForRun" value="True"/>
+    <add key="englishLayerNamesList" value="CCG Bases,SAR Stations,RCCs,CP Offices,MSOCs,MCTS Centres,CCG Small Vessels,CCG Lightstations,CCG Inshore Rescue Boats,Royal Canadian Marine - SAR Bases,CCG VHF Direction Finding,Arctic Environment Response Depot,Environmental Response Cache"/>
+    <add key="frenchLayerNamesList" value="Bases de la GCC,Stations de RES,COR,Bureau de conservation et protection,MSOCs,MCTS Centres,Petit bateau de GCC,Phares GCC,Bateaux de sauvetage côtier GCC,Bases de RES de la Royal Canadian Marine,VHF de la GCC,Depot de réponse environmental pour l'arctique,Cache de réponse environmental"/>
+  </appSettings>
 </configuration>
